# EnGPar

./: CMakeLists.txt  README.md  runOpenCl.sh  runOpenCl_tests.sh
agi/: agiConstruct.cpp  agiIO.cpp  agiMigrationTimers.cpp  agiValid.cpp  pngraph.h
opencl/: engpar_opencl_config.h.in  err_code.h
partition/Diffusive/: CMakeLists.txt  engpar_diffusive_input.cpp  engpar_diffusive_input.h
partition/Diffusive/src/: bfsCsrKernel.cl  bfsScgKernel.cl  bfsScgPipelinedKernel.cl  bfskernel.cl  engpar_bfsvisitfn.h  engpar_opencl_bfs.cpp  engpar_opencl_bfs.h  engpar_queue.cpp  engpar_queue_inputs.h
test/: CMakeLists.txt  testDistanceQueue.cpp  testFileIO.cpp
